RESOLVED FIXED25251
Crash when frame creation removes it from the parent
https://bugs.webkit.org/show_bug.cgi?id=25251
Summary Crash when frame creation removes it from the parent
Gustavo Noronha (kov)
Reported 2009-04-16 16:03:18 PDT
This is tested by the fast/loader/frame-creation-removal.html layout test. After 35088 our port has mostly adapted to the new requirements, but not all. We were still not checking for the frame being removed from the parent after init, and before loadURLIntoChildFrame.
Attachments
fix crash in fast/loader/frame-creation-removal.html (1.72 KB, patch)
2009-04-16 16:20 PDT, Gustavo Noronha (kov)
ap: review+
Gustavo Noronha (kov)
Comment 1 2009-04-16 16:20:43 PDT
Created attachment 29561 [details] fix crash in fast/loader/frame-creation-removal.html WebKit/gtk/ChangeLog | 16 ++++++++++++++++ WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp | 6 ++++++ 2 files changed, 22 insertions(+), 0 deletions(-)
Alexey Proskuryakov
Comment 2 2009-04-17 09:55:25 PDT
Comment on attachment 29561 [details] fix crash in fast/loader/frame-creation-removal.html r=me > + // Copied from Mac's FrameLoaderClient I'd suggest omitting this line - this kind of info is best discovered via svn blame and reading ChangeLogs.
Gustavo Noronha (kov)
Comment 3 2009-04-17 11:47:48 PDT
Landed as r42617, accepting ap's suggestion, thanks!
Note You need to log in before you can comment on or make changes to this bug.